# PromptChain

./: .env.example  .env.sample  .gitattributes  .gitignore  =3.0.0  =4.17  ACTIVITY_LOGS_FIX_SUMMARY.md  AGENTIC_ROUTER_MILESTONE_SUMMARY.md  BACKWARD_COMPATIBILITY_REPORT_0.4.1g.md  BUG_HUNTING_REPORT.md  CHANGELOG.md  CLAUDE.md  CLAUDE_CODE_AGENTS_GUIDE.md  CODE_REVIEW_enhanced_agentic_step_processor.md  CRITICAL_PERFORMANCE_FINDINGS.md  Contratto_high_fidelity.docx  DSPy_3.0_Custom_Evaluations_Guide.md  Data_resume_high_fidelity.docx  Data_resume_two_column.docx  GITHUB_SPEC_KIT_CHEATSHEET.md  HIERARCHICAL_STEPS_IMPLEMENTATION.md  HIJACKER_EXAMPLES_LOCATION.md  HISTORY_MODES_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY_T004.md  IMPLEMENTATION_SUMMARY_T006.md  IMPROVEMENT_ROADMAP.md  INSTALLATION.md  MANIFEST.in  MILESTONE_0.4.1g_SUMMARY.md  MLFLOW_OBSERVER_IMPLEMENTATION.md  OBSERVABILITY_ARCHITECTURE.md  OBSERVABILITY_DIAGNOSIS.md  OBSERVABILITY_EXECUTIVE_SUMMARY.md  OBSERVABILITY_FIXES_2026-01-10.md  OBSERVABILITY_PLUGIN_ARCHITECTURE.md  OBSERVABILITY_SYSTEM_STATUS.md  QUICKSTART.md  QUICK_FIX_GUIDE.md  QUICK_START.md  README.md  (+41 more)
.specify/: feature.json
Research_agent/: .env.backend  .env.example  .gitignore  GIT_SETUP_SUMMARY.md  README.md  REPOSITORY_ORGANIZATION.md  VERSION_TRACKING.md  document_search_service_integration_test.json  final_validation.json  pyproject.toml  rag_libraries_data_ingestion_analysis.md  search_results.json  start_backend.py  test_document_search_comprehensive.py  test_document_search_focused.py  test_full_3tier_pipeline.py  test_output.json
Research_agent/archive/: ASYNC_MCP_FIXES_SUMMARY.md  CLEANUP_REPORT.md  README.md
Research_agent/archive/completion_reports/: AGENT_5_PRODUCTION_SEARCH_INTERFACE_COMPLETE.md  CRAWL4AI_INTEGRATION_COMPLETE.md  INTELLIGENT_HYBRID_SEARCH_COMPLETE.md  LIGHTRAG_ENABLE_RERANK_FIX_COMPLETE.md  LIGHTRAG_IMPORT_FIX_COMPLETE.md  MCP_INTEGRATION_COMPLETE.md  PAPERQA2_INTEGRATION_COMPLETE.md  PRODUCTION_READINESS_CERTIFICATE.md  REAL_RAG_INTEGRATION_COMPLETE.md  SCIHUB_MCP_INTEGRATION_COMPLETE.md  SERIALIZATION_FIXES_COMPLETE.md  SYNTHESIS_PIPELINE_INTEGRATION_COMPLETE.md
Research_agent/archive/obsolete/: AGENT_3_MISSION_COMPLETE.md  COMPREHENSIVE_VALIDATION_REPORT.md  MANUAL_VALIDATION_REPORT.md
Research_agent/archive/setup_and_status/: ENVIRONMENT_STATUS.md  SCIHUB_MCP_SETUP.md  SEARCH_PAPERS_FIXES.md  VERSION_TRACKING.md
Research_agent/archive/technical_summaries/: ENHANCED_SCIHUB_INTEGRATION_SUMMARY.md  INTELLIGENT_SEARCH_VARIANTS_IMPLEMENTATION.md  NAMESPACE_TOOL_IMPLEMENTATION_SUMMARY.md  TECHNICAL_VERIFICATION_SUMMARY.md
Research_agent/config/: models.yaml  research_config.yaml
Research_agent/docs/: 3_TIER_RAG_SYSTEM_OVERVIEW.md  API.md  API_ALIGNMENT_SOLUTION.md  API_REFERENCE.md  API_SCHEMA_DOCUMENTATION.md  ARCHITECTURE.md  CLI.md  CONFIG.md  GRAPHRAG_TIER3_DOCUMENTATION.md  LIGHTRAG_CITATION_TRACKING_SOLUTION.md  LITERATURE_SEARCH_GUIDE.md  NAMESPACE_TOOL_MIGRATION_GUIDE.md  PAPERQA2_COMPREHENSIVE_GUIDE.md
Research_agent/document_search_workspace/test_download_20250831_080807/: search_summary.json
Research_agent/frontend/: README.md  components.json  package-lock.json  package.json
Research_agent/frontend/src/: App.svelte  app.css
Research_agent/inputs/: README.md
Research_agent/inputs/txt/: ai_ethics_frameworks.txt  (+3 more)
Research_agent/memory-bank/: FINAL_COMPLETION_MILESTONE.md  GRAPHRAG_COMPLETION_MILESTONE.md  INTELLIGENT_SEARCH_MILESTONE.md  KB_MANAGEMENT_MILESTONE.md  MILESTONE_SUMMARY.md  PAPERQA2_MILESTONE_COMPLETE.md  enhancement-project-risks.md  enhancement-success-metrics.md  implementation-status.md
Research_agent/papers/: README.md
Research_agent/prd/: advanced_router_web_chat_documentation.md  intelligent_search_variant_generation_prd.md  literature_search_prd.md  three_tier_rag_system_prd.md
Research_agent/processed/: README.md  processed_documents.json
Research_agent/tests/: __init__.py  conftest.py
athena-lightrag/: .env.example  .gitignore  CLAUDE_ANTI_LYING_GUIDE.md  DEBUG_USAGE_GUIDE.md  DEV_GUIDE.md  ENVIRONMENT_VALIDATION_REPORT.md  FASTMCP_VS_MCP_GUIDE.md  README.md  __init__.py  activate_env.sh  agentic_lightrag.py  athena_mcp_server.py  config.py  context_processor.py  debug_multihop.py  debug_tool_calls.py  environment_validation_results.json  exceptions.py  fastmcp.json  json_encoder.py  lightrag_core.py  pyproject.toml  quick_hybrid_test.py  requirements.txt  setup_verification_system.sh  simple_athena_mcp_server.py  simple_working_mcp_server.py  temp_multihop_bypass.py  test_multihop_v042.py  tool_run_report.md  validate_environment.py  working_mcp_server.py
athena-lightrag/athena_lightrag/: __init__.py  core.py  server.py  server_fixed.py
athena-lightrag/docs/: ADVERSARIAL_TEST_REPORT.md  API_DOCUMENTATION.md  IMPLEMENTATION_SUMMARY.md  PROJECT_SUMMARY.md  README.md  README_TECHNICAL.md  api-reference.md  integration-guide.md  openapi-spec.yaml  performance-guide.md  troubleshooting-guide.md  usage-examples.md
athena-lightrag/memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  syncAsyncInvestigation.md  systemPatterns.md  techContext.md
athena-lightrag/prd/: PRD_Rerank_Model_Enhancement.md
athena-lightrag/testing/: IMPROVEMENTS_SUMMARY.md  MODEL_COST_OPTIMIZATION.md  README_LIGHTRAG_TEST.md  adversarial_test_suite.py  comprehensive_tool_test.py  critical_bugs.json  demo_working_tools.py  environment_validation_report.py  focused_bug_analysis.py  integration_test.py  lightrag_multihop_isolation_test.py  promptchain_mcp_test_client.py  quick_test.py  real_mcp_tool_test.py  run_lightrag_test.sh  test_120s_timeout.py  test_async_fixes.py  test_async_tools_direct.py  test_corrected_fixes.py  test_debug_logging.py  test_direct_tool_usage.py  test_final_verification.py  test_fixed_tools.py  test_integration.py  test_mcp_tools.py  test_no_excuses.py  test_schema_discovery.py  test_server.py  test_specific_tools.py  validate_environment.py  validate_system.py
athena-lightrag/usecase-validator/: env.example  requirements.txt
(+1996 files in other folders)
